// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`HeadlineBanner renders on home correctly 1`] = `
<div
  class="mb-32 mt-24"
  data-testid="headline-banner"
>
  <a
    href="/"
  >
    <h1
      class="u-squishy-text"
    >
      <span>
        I am
      </span>
      <div
        class="Typewriter"
        data-testid="typewriter-wrapper"
      >
        <span
          class="Typewriter__wrapper"
        />
        <span
          class="Typewriter__cursor"
        >
          |
        </span>
      </div>
    </h1>
  </a>
</div>
`;

exports[`HeadlineBanner renders on other pages correctly 1`] = `
<div
  class="mb-32 mt-24"
  data-testid="headline-banner"
>
  <a
    href="/"
  >
    <h1
      class="u-squishy-text"
    >
      <span
        class="block"
      >
        Marcel
      </span>
      <span
        class="block"
      >
        Birkhahn
      </span>
    </h1>
  </a>
</div>
`;
